<resources>
    <string name="app_name">LockScreenApp</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="setting_language">Languages</string>
    <string name="setting_policy">Privacy Policy</string>
    <string name="setting_en">English</string>
    <string name="setting_vi">Vietnamese</string>
    <string name="setting_it">Italian</string>
    <string name="setting_spain">Spanish</string>
    <string name="setting_hindi">Hindi</string>
    <string name="setting_china">China</string>
    <string name="setting_russian">Russian</string>
    <string name="setting_bengal">Bengal</string>
    <string name="setting_japan">Japan</string>
    <string name="setting_marathi">Marathi</string>
    <string name="setting_telugu">Telugu</string>
    <string name="setting_turkish">Turkish</string>
    <string name="setting_tamil">Tamil</string>
    <string name="setting_korea">Korea</string>
    <string name="setting_italian">Italian</string>
    <string name="setting_thailand">Thailand</string>
    <string name="setting_pt">Portuguese</string>
    <string name="setting_de">German</string>
    <string name="setting_fr">French</string>
    <string name="setting_in">Indonesia</string>
    <string name="setting_th">Thai</string>
    <string name="setting_ms">Malaysia</string>
    <string name="setting_ar">Arabic</string>
    <string name="setting_zh_tw">Taiwanese</string>
    <string name="setting_my">Myanmar</string>
    <string name="setting_tr">Turkish</string>
    <string name="setting_ur">Pakistan</string>
    <string name="view">View</string>
    <string name="your_friend">\"Your friend \"</string>
    <string name="visit_app">\" wants you to check out our app!. Visit us at: \"</string>
    <string name="choose_way_share">Choose a way to share:</string>
    <string name="rate_app">Rate app</string>
    <string name="share_us">Share Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_users">Term of Users</string>
    <string name="version_app">Version App</string>
    <string name="language">Language</string>
    <string name="title_rate">Do you like the app?</string>
    <string name="desc_rate">Let us know your experience\n 5 stars is the best on Google Play!</string>
    <string name="rate_us">Rate us</string>
    <string name="thanks_rating">Thanks for your rating</string>
    <string name="you_can_write_feedback">You can write feedback for us</string>
    <string name="write_feedback">Write feedback</string>
    <string name="improve_exp">We\'ll improve your experience</string>
    <string name="rate_google_play">Rate on Google play</string>
    <string name="no_internet">Your internet connection is not working. Please check your network and try to connect again.</string>
    <string name="connect">Connect</string>
    <string name="the_action_may_contain_advertising">The action may contain advertising</string>
    <string name="ob1_title">Use The Camera To Draw</string>
    <string name="ob2_title">Learning To Draw</string>
    <string name="ob3_title">Many Template Free</string>
    <string name="ob4_title">Drawing AR Is Easy</string>
    <string name="ob1_description">Helping you enhance your drawing skills by sketching our drawings through the camera.</string>
    <string name="ob2_description">Learning to draw using a camera is a great way to help you practice drawing skills and enter the world of art.</string>
    <string name="ob3_description">Lots of tracing templates: Animal, Anime, Cars, Food, Nature…</string>
    <string name="ob4_description">Through the camera helps you sketch your favorite photos easily.</string>
    <string name="next">Next</string>
    <string name="get_started_btn">Get Started</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="top_trending">Top Trending</string>
    <string name="view_all">View All</string>
    <string name="latest">Latest</string>
    <string name="_4k_wallpaper">4K Wallpaper</string>
    <string name="application_update">Application Updates</string>
    <string name="your_are_has_new">Your app has a new updated version \n Please update for a better experience</string>
    <string name="update_now">Update now!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="like">Like:</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="calendar">Calendar</string>
    <string name="txt_continue">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="choose_your_favorite_categories">Choose your favorite categories.</string>
    <string name="an_error_has_occurred_when_install_this_wallpaper_please_try_again_later">An error has occurred when installing this wallpaper, please try again later!</string>
    <string name="set_wallpaper">Set wallpaper successfully.</string>
    <string name="favourite">Favourite</string>
    <string name="category">Category</string>
    <string name="exit_title">Exit App</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_amp_lock_screen"><![CDATA[Home & Lock Screen]]></string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="set_wallpaper_btn">Set Wallpaper</string>
    <string name="galaxy">Galaxy</string>
    <string name="wallpapers">" wallpapers"</string>
    <string name="watch_an_ads">Watch an ADS</string>
    <string name="load_ads_fail">load ads fail</string>
    <string name="you_can_view_and_set">You can view and set this wallpaper by watching an ad! Ready?</string>
    <string name="switch_camera_button_alt">Switch camera\n</string>
    <string name="ar_draw">AR Draw</string>
    <string name="library">Library</string>
    <string name="see_all">See All</string>
    <string name="welcome_title_1">Your Drawing Hobby?</string>
    <string name="welcome_title_2">Choose a few topics you want</string>
    <string name="exit_question">You definitely want to exit?</string>
    <string name="start_drawing_text">Start Drawing Text</string>
    <string name="text_styles">Text styles</string>
    <string name="text_art">Text ART</string>
    <string name="loading_ads">Loading Ads</string>
    <string name="permission_title_1">Allow Notification</string>
    <string name="permission_title_2">Access Media</string>
    <string name="permission_title_3">Access Camera</string>
    <string name="permission_text_1">Send notifications for app\'s detail and latest news to user\'s device</string>
    <string name="permission_text_2">Allow access to device\'s gallery to upload media when needed</string>
    <string name="permission_text_3">Allow camera access so the app can help you complete AR drawings</string>
    <string name="continue_txt">Continue</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="apply">Apply</string>
    <string name="others">Others</string>
    <string name="desc_watch_ads">You will earn this by watching an ad! Ready?</string>
    <string name="title_watch_1">You will earn this by watching <font color='#358DDF'>an ad</font>! Ready?</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_draw_text">Use a tripod, a glass, or a stack of books to hold your phone in place while you draw</string>
    <string name="draw_with_camera">Draw With Camera</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete">Delete</string>
    <string name="opacity">Opacity</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exit">Exit</string>
    <string name="successful">Successful</string>
    <string name="an_error_has_occurred_please_try_again_later">An error has occurred, please try again later</string>
    <string name="back_and_front_camera_are_unavailable">Back and front camera are unavailable</string>
    <string name="video_capture_succeeded">Video capture succeeded</string>
    <string name="delete_successful">Delete successful</string>
    <string name="save_successful">Save successful</string>
    <string name="save_unsuccessful">Save unsuccessful, please try again!</string>
    <string name="permissions">Permissions</string>
    <string name="permission_desc">To continue, please provide following permissions</string>
    <string name="text_draw">Text Draw</string>
    <string name="my_creative">My Creative</string>
    <string name="sketch_ar">Sketch AR</string>
    <string name="how_to_use">How To Use?</string>
    <string name="how_to_use_header">How To Use</string>
    <string name="how_to_sketch">How To Sketch AR?</string>
    <string name="how_to_draw_art">How To Draw Art?</string>
    <string name="how_to_text_draw">How To Text Draw?</string>
    <string name="phase_1">Phase 1</string>
    <string name="phase_2">Phase 2</string>
    <string name="sketch_tutorial_1">Place your phone on a cup, tripod, or stack of books so it\'s parallel to the table.</string>
    <string name="sketch_tutorial_2">Place a piece of paper on the screen &amp; proceed to draw the image.</string>
    <string name="draw_art_tutorial_1">Customize color parameters, brush size and start practicing drawing.</string>
    <string name="draw_art_tutorial_2">Tip: “\Using a stylus to draw will help you improve your drawing skills”\</string>
    <string name="draw_text_tutorial_1">Customize color parameters, brush size and start practicing drawing.</string>
    <string name="draw_text_tutorial_2">Place a piece of paper on the screen and trace the text you\'ve selected.</string>
    <string name="trending">Trending</string>
    <string name="allow">Allow</string>
    <string name="already_saved">This creative has been saved</string>
    <string name="error_placeholder">Delete unsuccessful, this is a placeholder photo</string>
    <string name="sketch">Sketch</string>
    <string name="ok_i_got_this">OK, I got this</string>
    <string name="pen">Pen</string>
    <string name="pen_color">Pen Color</string>
    <string name="eraser">Eraser</string>
    <string name="bg_color">BG Color</string>
    <string name="save">Save</string>
    <string name="pen_tools">Pen Tools</string>
    <string name="background_color">Background Color</string>
    <string name="ok">OK</string>
    <string name="save_failed">Save failed</string>
    <string name="ar_draw_loading">AR Draw loading...</string>
    <string name="you_have_successfully_saved_this">You have successfully Saved this</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="you_have_successfully_downloaded_this">You have successfully downloaded this</string>
    <string name="download_successful">Downloaded Successfully</string>
    <string name="success_installing_text">You have successfully downloaded this</string>
    <string name="term_conditions_iap"><u>Term &amp; Conditions</u></string>
    <string name="privacy_policy_iap"><u>Privacy Policy</u></string>
</resources>