<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/buttonClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_close_draw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/buttonUndo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_undo_disable"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/buttonClose"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/buttonRedo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_redo_disable"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toEndOf="@+id/buttonClose"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_100"
                android:backgroundTint="@color/neutral10"
                android:paddingHorizontal="12dp"
                android:paddingVertical="7dp"
                android:text="@string/save"
                android:textColor="@color/bottom_menu_drawing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.lockscreenapp.ultis.drawing.CanvasView
            android:id="@+id/paintView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_radius_8"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/layoutBottomMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutToolBar"
            app:paintColor="@color/white"
            app:paintStroke="5" />

        <LinearLayout
            android:id="@+id/layoutBottomMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/buttonPen"
                style="@style/TextBottomMenuDrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pen"
                android:textColor="@color/bottom_menu_drawing"
                app:drawableTopCompat="@drawable/ic_draw_pen" />

            <TextView
                android:id="@+id/buttonPenColor"
                style="@style/TextBottomMenuDrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pen_color"
                android:textColor="@color/bottom_menu_drawing"
                app:drawableTopCompat="@drawable/ic_draw_pen_color" />

            <TextView
                android:id="@+id/buttonErase"
                style="@style/TextBottomMenuDrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eraser"
                android:textColor="@color/bottom_menu_drawing"
                app:drawableTopCompat="@drawable/ic_draw_eraser" />

            <TextView
                android:id="@+id/buttonBGColor"
                style="@style/TextBottomMenuDrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bg_color"
                android:textColor="@color/bottom_menu_drawing"
                android:visibility="gone"
                app:drawableTopCompat="@drawable/ic_draw_bg_color"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/buttonCollapse"
            android:layout_width="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_collap_draw"
            app:layout_constraintBottom_toTopOf="@+id/container_toolbox"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:id="@+id/container_toolbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toTopOf="@id/layoutBottomMenu"
            tools:background="@color/neutral40"
            tools:layout_height="200dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>